syntax = "proto3";

package zerg.pool;
import "version.proto";

option (zerg.protocol_version) = "2.0.0";

// 响应状态枚举
enum Status {
  SUCCESS = 0;    // 成功
  FAILURE = 1;    // 失败
  PROCESSING = 2; // 处理中
  TIMEOUT = 3;    // 超时
}

// 健康状态枚举
enum HealthState {
  HEALTHY = 0;
  UNHEALTHY = 1;
  CIRCUIT_BREAKER = 2;
}

// 任务消息定义
message Task {
  string id = 1;          // 任务唯一ID
  bytes payload = 2;      // 任务负载数据
  int64 timestamp = 3;    // 任务创建时间戳（保持原位置）
  map<string, string> metadata = 4; // 任务元数据
  optional uint32 priority = 5; // 任务优先级（1-10）
}

// 响应消息定义
message Response {
  string worker_id = 1;   // 工作节点ID
  oneof result {
    bytes output = 2;     // 成功时的输出
    string error = 3;     // 失败时的错误信息
  }
}

// 工作节点注册消息
message Registration {
  string worker_id = 1;    // 工作节点ID
  int32 max_threads = 2;   // 最大线程数（根据CPU核心数）
  string version = 3;      // 节点版本（CARGO_PKG_VERSION）
  repeated string capabilities = 4; // 扩展能力列表
}

// 心跳消息
message Heartbeat {
  string worker_id = 1;   // 工作节点ID
  int64 timestamp = 2;    // 心跳时间戳
  HealthState state = 3;  // 健康状态
  float cpu_usage = 4;    // CPU使用率(0-1)
  float mem_usage = 5;    // 内存使用率(0-1)
  uint32 net_latency = 6; // 网络延迟(ms)
  uint32 current_tasks = 7; // 当前正在处理的任务数
  uint32 max_tasks = 8;   // 节点最大并发任务数
}